<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textColor="@color/main_title_text"
    tools:context="com.babakchehraz.portfolio.MainActivity"
    android:background="@color/menu_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="My Nanodegree Projects"
        android:clickable="true"
        android:id="@+id/menu_title"
        android:textSize="20dp"
        android:textColor="@color/menu_title_text"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_button_1"
        android:clickable="true"
        android:layout_below="@id/menu_title"
        android:id="@+id/btn1"
        android:background="@color/menu_buttons"
        android:layout_margin="10dp"
        android:textColor="@color/menu_buttons_text"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_button_2"
        android:clickable="true"
        android:layout_below="@id/btn1"
        android:id="@+id/btn2"
        android:background="@color/menu_buttons"
        android:layout_margin="10dp"
        android:textColor="@color/menu_buttons_text"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_button_3"
        android:clickable="true"
        android:layout_below="@id/btn2"
        android:id="@+id/btn3"
        android:background="@color/menu_buttons"
        android:layout_margin="10dp"
        android:textColor="@color/menu_buttons_text"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_button_4"
        android:clickable="true"
        android:layout_below="@id/btn3"
        android:id="@+id/btn4"
        android:background="@color/menu_buttons"
        android:layout_margin="10dp"
        android:textColor="@color/menu_buttons_text"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_button_5"
        android:clickable="true"
        android:layout_below="@id/btn4"
        android:id="@+id/btn5"
        android:background="@color/menu_buttons"
        android:layout_margin="10dp"
        android:textColor="@color/menu_buttons_text"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_button_6"
        android:clickable="true"
        android:layout_below="@id/btn5"
        android:id="@+id/btn6"
        android:background="@color/menu_buttons"
        android:layout_margin="10dp"
        android:textColor="@color/menu_buttons_text"/>
</RelativeLayout>
